# agentic-policy-brief-builder

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  streamlit_app.py
data/synthetic/: README.md
data/synthetic/policy_packet/: 01_city_housing_needs_memo.md  02_zoning_reform_options.md  03_community_feedback_summary.md  04_implementation_timeline.md
docs/: ci.md  demo_script.md  demo_walkthrough.md  evaluation.md  final_portfolio_checklist.md  interview_talk_track.md  limitations.md  portfolio_overview.md  profile_readme_entry.md  recruiter_summary.md  release_notes.md  release_readiness.md  roadmap.md  screenshot_guide.md  technical_deep_dive.md
evals/fixtures/: synthetic_policy_questions.json
scripts/: check_release_readiness.py  check_repo_health.py  run_local_evals.py
src/agentic_policy_brief_builder/: config.py
src/agentic_policy_brief_builder/audit/: __init__.py  citations.py
src/agentic_policy_brief_builder/drafting/: __init__.py  brief.py  schemas.py
src/agentic_policy_brief_builder/evals/: __init__.py  fixtures.py  quality_gates.py  runner.py
src/agentic_policy_brief_builder/health/: __init__.py  release.py  repository.py
tests/: test_brief_drafting.py  test_chunking.py  test_citation_audit.py  test_config.py  test_embeddings.py  test_eval_fixtures.py  test_eval_runner.py  test_loaders.py  test_quality_gates.py  test_release_readiness.py  test_repository_health.py  test_synthetic_packet.py  test_ui_formatting.py  test_vector_store.py
(+12 files in other folders)
