[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "agentic-policy-brief-builder"
version = "0.1.0"
description = "Agentic RAG app for cited policy brief generation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Prashant Shuklabaidya" }
]
keywords = [
  "agentic-rag",
  "openai",
  "streamlit",
  "policy-analysis",
  "citation-audit",
  "portfolio-project"
]
dependencies = [
  "openai>=2.0.0",
  "streamlit>=1.40.0",
  "pydantic>=2.0.0",
  "pymupdf>=1.24.0",
  "chromadb>=0.5.0",
  "python-dotenv>=1.0.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_policy_brief_builder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "evals: deterministic local evaluation tests",
]
